2011-02-23  Xavier Perseguers  <xavier@causal.ch>

	* Initial implementation