@@ -1,3 +1,4 @@
 2011-02-23  Xavier Perseguers  <xavier@causal.ch>
 
+	* Externalized configuration as typo3conf/mytypo3_conf.php
 	* Initial implementation
